@@ -1,5 +1,10 @@
 2013-08-21  Simon Cook  <simon.cook@embecosm.com>
 
+	* include/elfhash.h: Define hashedelf::ignoredsection.
+	* include/elfhash.cpp: Likewise.
+
+2013-08-21  Simon Cook  <simon.cook@embecosm.com>
+
 	* include/elfhash.h: Define hashedelf.
 	* mageec/elfhash.cpp: Define hashedelf class implementation.
 	* mageec/mageechash.cpp: Added command line interface to hashedelf.
